@@ -54,8 +54,9 @@ include_once('include/page_header.php');
 		'stime'=>	array(T_ZBX_STR, O_OPT,	 null,	null, null),
 //ajax
 		'favobj'=>		array(T_ZBX_STR, O_OPT, P_ACT,	NULL,			NULL),
-		'favref'=>		array(T_ZBX_STR, O_OPT, P_ACT,  NOT_EMPTY,		'isset({favobj})'),
+		'favref'=>		array(T_ZBX_STR, O_OPT, P_ACT,  NOT_EMPTY,		'isset({favobj}) && ("filter"=={favobj})'),
 		'state'=>		array(T_ZBX_INT, O_OPT, P_ACT,  NOT_EMPTY,		'isset({favobj}) && ("filter"=={favobj})'),
+		'favid'=>		array(T_ZBX_INT, O_OPT, P_ACT,  null,			null),
 	);
 
 	check_fields($fields);
@@ -65,6 +66,12 @@ include_once('include/page_header.php');
 	if(isset($_REQUEST['favobj'])){
 		if('filter' == $_REQUEST['favobj']){
 			CProfile::update('web.auditlogs.filter.state',$_REQUEST['state'], PROFILE_TYPE_INT);
+		}
+		// saving fixed/dynamic setting to profile
+		if('timelinefixedperiod' == $_REQUEST['favobj']){
+			if(isset($_REQUEST['favid'])){
+				CProfile::update('web.auditlogs.timelinefixed', $_REQUEST['favid'], PROFILE_TYPE_INT);
+			}
 		}
 	}
 
@@ -102,8 +109,8 @@ include_once('include/page_header.php');
 
 	$cmbConf = new CComboBox('config', 'auditlogs.php');
 	$cmbConf->setAttribute('onchange', 'javascript: redirect(this.options[this.selectedIndex].value);');
-		$cmbConf->addItem('auditlogs.php', S_LOGS);
-		$cmbConf->addItem('auditacts.php', S_ACTIONS);
+	$cmbConf->addItem('auditlogs.php', S_LOGS);
+	$cmbConf->addItem('auditacts.php', S_ACTIONS);
 	$frmForm->addItem($cmbConf);
 
 	$audit_wdgt->addPageHeader(S_AUDIT_LOGS_BIG,$frmForm);
@@ -296,7 +303,8 @@ include_once('include/page_header.php');
 		'loadImage' => 0,
 		'loadScroll' => 1,
 		'dynamic' => 0,
-		'mainObject' => 1
+		'mainObject' => 1,
+		'periodFixed' => CProfile::get('web.auditlogs.timelinefixed', 1)
 	);
 
 	zbx_add_post_js('timeControl.addObject("'.$dom_graph_id.'",'.zbx_jsvalue($timeline).','.zbx_jsvalue($objData).');');
