@@ -63,10 +63,15 @@ include_once('include/page_header.php');
 		if('hat' == $_REQUEST['favobj']){
 			CProfile::update('web.charts.hats.'.$_REQUEST['favref'].'.state',$_REQUEST['state'], PROFILE_TYPE_INT);
 		}
-
 		if('timeline' == $_REQUEST['favobj']){
 			if(isset($_REQUEST['graphid']) && isset($_REQUEST['period'])){
 				navigation_bar_calc('web.graph',$_REQUEST['favid'], true);
+			}
+		}
+		// saving fixed/dynamic setting to profile
+		if('timelinefixedperiod' == $_REQUEST['favobj']){
+			if(isset($_REQUEST['favid'])){
+				CProfile::update('web.charts.timelinefixed', $_REQUEST['favid'], PROFILE_TYPE_INT);
 			}
 		}
 
@@ -193,7 +198,8 @@ include_once('include/page_header.php');
 			'loadImage' => 1,
 			'loadScroll' => 1,
 			'scrollWidthByImage' => $scrollWidthByImage,
-			'dynamic' => 1
+			'dynamic' => 1,
+			'periodFixed' => CProfile::get('web.charts.timelinefixed', 1)
 		);
 
 		zbx_add_post_js('timeControl.addObject("'.$dom_graph_id.'",'.zbx_jsvalue($timeline).','.zbx_jsvalue($objData).');');
