@@ -82,9 +82,10 @@ include_once('include/page_header.php');
 
 		'showUnknown'=>		array(T_ZBX_INT, O_OPT,	P_SYS,	IN(array(0,1)),	NULL),
 //ajax
-		'favobj'=>			array(T_ZBX_STR, O_OPT, P_ACT,	NULL,			NULL),
-		'favref'=>			array(T_ZBX_STR, O_OPT, P_ACT,  NOT_EMPTY,		'isset({favobj})'),
-		'state'=>			array(T_ZBX_INT, O_OPT, P_ACT,  NOT_EMPTY,		'isset({favobj})'),
+		'favobj'=>		array(T_ZBX_STR, O_OPT, P_ACT,	NULL,			NULL),
+		'favref'=>		array(T_ZBX_STR, O_OPT, P_ACT,  NOT_EMPTY,		'isset({favobj}) && ("filter"=={favobj})'),
+		'state'=>		array(T_ZBX_INT, O_OPT, P_ACT,  NOT_EMPTY,		'isset({favobj}) && ("filter"=={favobj})'),
+		'favid'=>		array(T_ZBX_INT, O_OPT, P_ACT,  null,			null),
 	);
 
 	check_fields($fields);
@@ -93,6 +94,12 @@ include_once('include/page_header.php');
 	if(isset($_REQUEST['favobj'])){
 		if('filter' == $_REQUEST['favobj']){
 			CProfile::update('web.events.filter.state',$_REQUEST['state'], PROFILE_TYPE_INT);
+		}
+		// saving fixed/dynamic setting to profile
+		if('timelinefixedperiod' == $_REQUEST['favobj']){
+			if(isset($_REQUEST['favid'])){
+				CProfile::update('web.events.timelinefixed', $_REQUEST['favid'], PROFILE_TYPE_INT);
+			}
 		}
 	}
 
@@ -151,12 +158,12 @@ include_once('include/page_header.php');
 				$found = false;
 				foreach($newTrigger['functions'] as $fnum => $function){
 					foreach($oldTrigger['functions'] as $ofnum => $oldFunction){;
-// compare functions
+						// compare functions
 						if(($function['function'] != $oldFunction['function']) || ($function['parameter'] != $oldFunction['parameter'])) continue;
-// compare that functions uses same item keys
+						// compare that functions uses same item keys
 						if($newTrigger['items'][$function['itemid']]['key_'] != $oldTrigger['items'][$oldFunction['itemid']]['key_']) continue;
-// rewrite itemid so we could compare expressions
-// of two triggers form different hosts
+						// rewrite itemid so we could compare expressions
+						// of two triggers form different hosts
 						$newTrigger['functions'][$fnum]['itemid'] = $oldFunction['itemid'];
 						$found = true;
 
@@ -167,7 +174,7 @@ include_once('include/page_header.php');
 				}
 				if(!$found) continue;
 
-// if we found same trigger we overwriting it's hosts and items for expression compare
+				// if we found same trigger we overwriting it's hosts and items for expression compare
 				$newTrigger['hosts'] = $oldTrigger['hosts'];
 				$newTrigger['items'] = $oldTrigger['items'];
 
@@ -676,7 +683,8 @@ include_once('include/page_header.php');
 		'loadImage' => 0,
 		'loadScroll' => 1,
 		'dynamic' => 0,
-		'mainObject' => 1
+		'mainObject' => 1,
+		'periodFixed' => CProfile::get('web.events.timelinefixed', 1)
 	);
 
 	zbx_add_post_js('timeControl.addObject("'.$dom_graph_id.'",'.zbx_jsvalue($timeline).','.zbx_jsvalue($objData).');');
