@@ -106,6 +106,13 @@
 				print('switchElementsClass("addrm_fav","iconminus","iconplus");');
 			}
 		}
+
+		// saving fixed/dynamic setting to profile
+		if('timelinefixedperiod' == $_REQUEST['favobj']){
+			if(isset($_REQUEST['favid'])){
+				CProfile::update('web.screens.timelinefixed', $_REQUEST['favid'], PROFILE_TYPE_INT);
+			}
+		}
 	}
 
 	if((PAGE_TYPE_JS == $page['type']) || (PAGE_TYPE_HTML_BLOCK == $page['type'])){
@@ -285,7 +292,8 @@
 				'loadScroll' => 1,
 				'scrollWidthByImage' => 0,
 				'dynamic' => 0,
-				'mainObject' => 1
+				'mainObject' => 1,
+				'periodFixed' => CProfile::get('web.screens.timelinefixed', 1)
 			);
 
 			zbx_add_post_js('timeControl.addObject("'.$dom_graph_id.'",'.zbx_jsvalue($timeline).','.zbx_jsvalue($objData).');');
