@@ -164,6 +164,13 @@ include_once('include/page_header.php');
 				echo $script;
 			}
 		}
+
+		// saving fixed/dynamic setting to profile
+		if('timelinefixedperiod' == $_REQUEST['favobj']){
+			if(isset($_REQUEST['favid'])){
+				CProfile::update('web.slides.timelinefixed', $_REQUEST['favid'], PROFILE_TYPE_INT);
+			}
+		}
 	}
 
 	if((PAGE_TYPE_JS == $page['type']) || (PAGE_TYPE_HTML_BLOCK == $page['type'])){
@@ -337,7 +344,8 @@ include_once('include/page_header.php');
 					'loadScroll' => 1,
 					'scrollWidthByImage' => 0,
 					'dynamic' => 0,
-					'mainObject' => 1
+					'mainObject' => 1,
+					'periodFixed' => CProfile::get('web.slides.timelinefixed', 1)
 				);
 
 				zbx_add_post_js('timeControl.addObject("iframe",'.zbx_jsvalue($timeline).','.zbx_jsvalue($objData).');');
